[metadata]
name = <package name>
version = attr: <package name>.__version__
author = <author name>
author_email = <author email address>
license = Apache
description = <brief package description>
long_description = file: README.md
long_description_content_type = text/markdown
url = <url to the git package repository>

[options]
python_requires = >=3.6
package_dir = =src
packages = find:

[options.packages.find]
where = src
